@@ -25,6 +25,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+08-Jun-2013 Jean-Marie Simonet
+ # [#31073] Preview image has height of max 18px. Thanks Piotr Konieczny
+
 07-Jun-2013 Jean-Marie Simonet
  + [#31106] Added Belgian flag for mod_languages. Thanks Fonny Smets
  # [#30804] [3.x] *plug-in manager search give errors and warning for '/','*' and '\
